# openenv-aegis-security

./: .gitignore  Dockerfile  HACKATHON_SUBMISSION.md  README.md  aegis_env.py  cascade_sim.py  corpus_generator.py  index.html  models.py  pyproject.toml  train.py  train_12sigma.py  train_poaw_gated.py  upload_hf.py
server/: app.py
