[project]
name = "openenv-aegis-security"
version = "1.0.0"
description = "AEGIS Security RL Environment — The first RL environment where AI learns to defend itself. 42-layer adversarial defense cascade with tunable Stellschrauben."
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "OHM - Offline Human Mode"}]
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
train = [
    "trl>=0.7.0",
    "torch>=2.0",
    "transformers>=4.35",
    "unsloth",
]
